[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
authors = ["saikat"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2" }
worker-macros = { version = "0.4.2" }
console_error_panic_hook = { version = "0.1.7" }
